# kakuho

./: .gitignore  CLAUDE.md  README.md  biome.json  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  gemini-prompt.txt  gemini-review.yml  test.yml
backend/: alembic.ini  auth.py  config.py  crud.py  main.py  model.py  models.py  pyproject.toml  sample_data.py  schema.py  schemas.py  security.py  test.db
backend/alembic/: env.py
backend/alembic/versions/: 0f4670d615b9_fix_migration.py  1f478178459d_initial_migration.py  84b50efee285_fix_missing_tables.py
backend/crud/: base.py  event.py  reservation.py  seat_group.py  stage.py  ticket_type.py  user.py
backend/routes/: auth.py  event.py  reservation.py  seat_group.py  stage.py  ticket_type.py  user.py
backend/tests/: conftest.py  helpers.py  test_api.py  test_auth.py  test_crud.py  test_crud_extended.py  test_crud_stage_seatgroup.py  test_crud_ticket_reservation.py  test_crud_ticket_type.py  test_routes_extended.py  test_routes_reservations.py  test_routes_stage_seatgroup.py  test_routes_ticket_user.py  test_schemas.py
frontend/app/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/app/src/: App.tsx  config.ts  main.tsx
frontend/app/src/components/: Calendar.test.tsx  Calendar.tsx  CalendarView.tsx  CapacityAdjuster.tsx  CheckInEvent.tsx  CheckInItem.test.tsx  CheckInItem.tsx  CheckInSeatGroup.tsx  CheckInStage.tsx  ConfirmEvent.tsx  CreateEvent.tsx  CreateSeatGroup.tsx  CreateTicketType.tsx  CustomToolbar.tsx  EditSeatGroup.tsx  EditStage.tsx  EditTicketType.tsx  ErrorBoundary.tsx  EventDeleter.test.tsx  EventDeleter.tsx  EventDuplicater.tsx  EventInfoManager.tsx  EventList.tsx  Header.test.tsx  Header.tsx  Layout.test.tsx  Layout.tsx  LoadingScreen.test.tsx  LoadingScreen.tsx  ManageEvent.tsx  ManageItem.tsx  ManageListEvent.tsx  ManageListItem.tsx  ManageListSeatGroup.tsx  ManageListStage.tsx  ManageSeatGroup.tsx  ManageStage.tsx  ManageUserReservations.tsx  Modal.tsx  PaidStatusController.test.tsx  (+28 more)
frontend/app/src/context/: AppData.test.tsx  AppData.tsx  AuthContext.test.tsx  AuthContext.tsx  EventDataContext.tsx  NewItemContext.tsx  ReservationContext.tsx  (+2 more)
(+66 files in other folders)
