[project]
name = "backend"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "sqlalchemy>=2.0.51",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0,<6.0.0",
    "PyJWT>=2.13.0",
    "python-multipart>=0.0.32",
    "email-validator>=2.3.0",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.14.1",
    "psycopg2-binary>=2.9.12",
    "alembic>=1.18.4",
    "gunicorn>=26.0.0",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
